--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 <body>
 
     <div class="aero-glass">
-        <span class="aero-title">disregard and contempt for human rights have resulted</span>
+        <span class="aero-title">Wheareas disregard and contempt for human rights have resulted</span>
         <div class="aero-body">
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, illum beatae. Nobis alias distinctio ut ducimus, fuga inventore et magni? Sint natus ducimus voluptatibus quasi iure, ratione veritatis magnam numquam!
             </p>
-            <button class="aero-button">Click me</button>
+            <button type="button" class="aero-button">Click me</button>
         </div>
     </div>
 
