--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Aero Design</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,12 +16,14 @@
 <body>
 
     <div class="aero-glass">
-        <span class="aero-title">Wheareas disregard and contempt for human rights have resulted</span>
+        <h1 class="aero-title">Wheareas disregard and contempt for human rights have resulted</h1>
+        <h2 class="aero-title">Wheareas disregard and contempt for human rights have resulted</h2>
         <div class="aero-body">
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, illum beatae. Nobis alias distinctio ut ducimus, fuga inventore et magni? Sint natus ducimus voluptatibus quasi iure, ratione veritatis magnam numquam!
             </p>
-            <button type="button" class="aero-button">Click me</button>
+            <button type="button" class="aero-button aero-button-primary">Click me</button>
+            <button type="button" class="aero-button aero-button-outlined">Click me</button>
         </div>
     </div>
 
